<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BasicActivity">

    <TextView
        android:id="@+id/textView_action_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/button_toggle_actionmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/toggle_actionmode"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/button_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datapicker"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timepicker"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_dialog"
        android:textColor="@android:color/black" />

</LinearLayout>